--- a/src/main/resources/templates/userinfo.html
+++ b/src/main/resources/templates/userinfo.html
@@ -14,11 +14,12 @@
 </head>
 <body>
     <div th:insert="~{navigation :: nav}"></div>
-    <div class="col-md-4 col-md-offset-4">
-        <div class="col-md-4 col-md-offset-4">
-            <img th:src="${user.avatarUrl}" alt="/images/default-avatar.png" class="img-circle" style="width: 140px; height: 140px;">
-        </div>
-        <div class="col-md-8 col-md-offset-2">
+    <div class="col-md-4">
+        <img th:src="${user.avatarUrl}" alt="/images/default-avatar.png" class="img-circle center-block" style="width: 200px; height: 200px;margin-top: 20%">
+    </div>
+
+    <div class="col-md-4">
+        <div style="margin-top: 20%">
             <form enctype="multipart/form-data" action="/updateInfo" method="post">
                 <div class="form-group">
                     <label for="username">昵称</label>
@@ -26,7 +27,7 @@
                 </div>
                 <div class="form-group">
                     <label for="bio">个人简介</label>
-                    <textarea class="form-control" rows="3" name="bio" id="bio" th:text="${user.bio}"></textarea>
+                    <textarea class="form-control" rows="5" name="bio" id="bio" th:text="${user.bio}"></textarea>
                 </div>
 
                 <div class="form-group">
@@ -34,7 +35,7 @@
                     <input type="file" id="avatar" name="avatar">
                 </div>
                 <div class="col-md-4 col-md-offset-4">
-                    <button type="submit" class="btn btn-default">Submit</button>
+                    <button type="submit" class="btn btn-default">修改</button>
                 </div>
 
             </form>
