--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -93,19 +93,19 @@
                 <button id="chat" th:data-user="${session.user.getName()}" class="btn-primary btn-lg btn" onclick="chat(this)" >聊天室</button>
             </div>
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h4>Weather</h4>
-                <img class="img-thumbnail question-wechat" th:src="@{'/images/weathercn/'+${weather.getImgIdx()}+'.png'}" alt="..">
-                <span th:text="${weather.getWeekIdx()}"></span>
-                <span th:text="${weather.getWeather()}"></span>
+<!--            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
+<!--                <h4>Weather</h4>-->
+<!--                <img class="img-thumbnail question-wechat" th:src="@{'/images/weathercn/'+${weather.getImgIdx()}+'.png'}" alt="..">-->
+<!--                <span th:text="${weather.getWeekIdx()}"></span>-->
+<!--                <span th:text="${weather.getWeather()}"></span>-->
 
-                <div th:each="future:${weather.getFutureWeather()}">
-                    <img class="img-thumbnail question-wechat" th:src="@{'/images/weathercn/'+${future.getImgIdx()}+'.png'}" alt="..">
-                    <span th:text="${future.getWeekIdx()}"></span>
-                    <span th:text="${future.getWeather()}"></span>
-                </div>
+<!--                <div th:each="future:${weather.getFutureWeather()}">-->
+<!--                    <img class="img-thumbnail question-wechat" th:src="@{'/images/weathercn/'+${future.getImgIdx()}+'.png'}" alt="..">-->
+<!--                    <span th:text="${future.getWeekIdx()}"></span>-->
+<!--                    <span th:text="${future.getWeather()}"></span>-->
+<!--                </div>-->
 
-            </div>
+<!--            </div>-->
 
 
         </div>
